--- a/templates/characters/index.html.twig
+++ b/templates/characters/index.html.twig
@@ -1,50 +1,29 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CharacterController!{% endblock %}
+{% block title %}Characters{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <div class="max-w-3xl mx-auto p-6"
+         data-controller="character-list"
+         data-character-list-loading-message-value="Loading characters..."
+         data-character-list-error-message-value="Sorry, there was an error loading the characters.">
 
-<div class="example-wrapper">
-    <h1>Select a Dimension</h1>
-    <select id="dimensionDropdown">
-        <option value="">-- Select a Dimension --</option>
-        {% for dimension in dimensions %}
-            <option value="{{ dimension['id'] }}">{{ dimension['name'] }}</option>
-        {% endfor %}
-    </select>
-</div>
+        <div class="mb-8">
+            <h1 class="text-2xl font-bold mb-4">Select a Dimension</h1>
+            <select
+                data-character-list-target="select"
+                data-action="change->character-list#onChange"
+                class="w-full p-2 border rounded-lg">
+                <option value="">-- Select a Dimension --</option>
+                {% for dimension in dimensions %}
+                    <option value="{{ dimension.id }}">{{ dimension.name }}</option>
+                {% endfor %}
+            </select>
+        </div>
 
-<div id="charactersList">
-    <!-- Characters will be rendered here -->
-</div>
-
-<script>
-    document.getElementById('dimensionDropdown').addEventListener('change', function() {
-        var dimension = this.value;
-        if(dimension) {
-            fetch('/dimension/' + dimension + '/characters')
-                .then(response => response.json())
-                .then(data => {
-                    // For demonstration, display the location info and a list of resident names.
-                    var html = '<h2>' + data.name + ' (' + data.dimension + ')</h2>';
-                    html += '<p>Type: ' + data.type + '</p>';
-                    html += '<h3>Residents:</h3><ul>';
-                    data.residents.forEach(function(character) {
-                        html += '<li>' + character.name + ' (' + character.species + ')</li>';
-                    });
-                    html += '</ul>';
-                    document.getElementById('charactersList').innerHTML = html;
-                })
-                .catch(error => {
-                    document.getElementById('charactersList').innerHTML = '<p>Error fetching character data.</p>';
-                });
-        } else {
-            document.getElementById('charactersList').innerHTML = '';
-        }
-    });
-</script>
+        <div data-character-list-target="list" class="character-list">
+            <!-- Characters will be rendered here -->
+        </div>
+    </div>
 {% endblock %}
+
